tests/semantic_cases/invalid/while_undefined_in_body.ob0
MODULE Main;
VAR x;
BEGIN
  x := 1;
  WHILE x DO
    x := y - 1
  END
END Main.
